--- a/WPFCalculator/App.config
+++ b/WPFCalculator/App.config
@@ -1,6 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <system.serviceModel>
+    <client>
+      <endpoint address="http://localhost:11111/CalculatorService" behaviorConfiguration="Behaviors.EndpointBehavior" binding="wsHttpBinding" contract="Learning.Calculator.Models.ICalculatorService" name="CalculatorService" bindingConfiguration="customBinding"/>
+    </client>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="customBinding" maxBufferPoolSize="73400320" maxReceivedMessageSize="73400320" closeTimeout="00:30:00" openTimeout="00:30:00" receiveTimeout="00:30:00" sendTimeout="00:30:00">
+          <readerQuotas maxArrayLength="73400320" maxBytesPerRead="73400320" maxNameTableCharCount="73400320" maxStringContentLength="73400320"/>
+          <security mode="None"></security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="Behaviors.EndpointBehavior">
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+  </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
 </configuration>
